--- a/arc_star/CMakeLists.txt
+++ b/arc_star/CMakeLists.txt
@@ -1,14 +1,27 @@
-cmake_minimum_required(VERSION 2.8.8)
+cmake_minimum_required(VERSION 3.12)
 project(arc_star)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -march=native" )
+
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE Release)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native")
+endif()
+
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
+
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 find_package(Eigen3 REQUIRED)
 
-include_directories(
-  include
-  ${EIGEN3_INCLUDE_DIRS}
-)
+add_library(arc_star SHARED src/arc_star_detector.cc)
+target_include_directories(
+  arc_star PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+                  $<INSTALL_INTERFACE:include>)
+target_link_libraries(arc_star PUBLIC Eigen3::Eigen)
 
-add_executable(arc_star_app_file src/arc_star_app_file.cc src/arc_star_detector.cc)
-target_link_libraries(arc_star_app_file)
-
+add_executable(arc_star_app src/arc_star_app_file.cc)
+target_link_libraries(arc_star_app arc_star)
