--- a/package.xml
+++ b/package.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0"?>
-<package format="2">
-  <name>arc_star_ros</name>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
+  <name>arc_star</name>
   <version>1.0.0</version>
   <description>The Arc* Detector ROS package</description>
 
   <maintainer email="ialzugaray@mavt.ethz.ch">Ignacio Alzugaray</maintainer>
-  <author>Ignacio Alzugaray</author>
   <license>MIT</license>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <!-- ROS1 dependencies -->
+  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
+  <depend condition="$ROS_VERSION == 1">roscpp</depend>
+  <depend condition="$ROS_VERSION == 1">dvs_msgs</depend>
 
-  <depend>roscpp</depend>
-  <depend>dvs_msgs</depend>
+  <!-- ROS2 dependencies -->
+  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
+
+  <!-- ROS1/ROS2 dependencies -->
+  <depend>event_camera_msgs</depend>
+  <depend>event_camera_codecs</depend>
 
   <export>
-
+    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
+    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
   </export>
-
-
 </package>
